--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -10,3 +10,24 @@ $dark: black;
 // Fonts Family
 $textFontFamily: "Open Sans", sans-serif;
 $titleFontFamily: "Passion One", cursive;
+
+// Font size
+$h1Size: 40;
+$h1Weight: 700;
+$h1LineHeight: 36;
+
+$h2Size: 20;
+$h2Weight: 700;
+$h2LineHeight: 23;
+
+$pSize: 16;
+$pWeight: 400;
+$pLineHeight: 26;
+
+$btnLgSize: 24;
+$btnLgWeight: 400;
+$btnLgLineHeight: 48;
+
+$btnSmSize: 24;
+$btnSmWeight: 400;
+$btnSmLineHeight: 48;
