--- a/css/styles.scss
+++ b/css/styles.scss
@@ -95,14 +95,22 @@ h6 {
   position: fixed;
   width: 100%;
 
+  z-index: 100;
+
   padding: remCalc(20) 0;
 
   background: $primaryColor;
 
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+
+  border-radius: 0 0 25px 25px;
+
+  border-bottom: 1px solid $lightPrimary;
+
   // Logo
   .logo {
     display: block;
-    width: remCalc(170);
+    width: remCalc(180);
     margin-left: remCalc(60);
 
     transition: all 0.2s ease;
@@ -151,4 +159,5 @@ h6 {
 main {
   max-width: remCalc(1200);
   margin: 0 auto;
+  position: relative;
 }
