--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,10 +1,11 @@
 // Colors
+$bgPrimary: #e94444;
 $primaryColor: #36314f;
 $secondaryColor: #faa34a;
 $lightPrimary: #855b80;
 $darkPrimary: #291736;
-$lightSecondary: #e8b056;
-$white: white;
+$lightSecondary: #ffe5b6;
+$white: #ffffff;
 $dark: black;
 
 // Fonts Family
@@ -12,11 +13,11 @@ $textFontFamily: "Open Sans", sans-serif;
 $titleFontFamily: "Passion One", cursive;
 
 // Font size
-$h1Size: 40;
+$h1Size: 56;
 $h1Weight: 700;
 $h1LineHeight: 36;
 
-$h2Size: 20;
+$h2Size: 24;
 $h2Weight: 700;
 $h2LineHeight: 23;
 
