--- a/css/styles.scss
+++ b/css/styles.scss
@@ -250,6 +250,54 @@ main {
         margin-left: remCalc(5);
       }
     }
+
+    // Temtem Card
+    .temtem-card {
+      margin: remCalc(32) remCalc(48);
+
+      .temtem-portrait {
+        background: url(../assets/Temtem_portrait_background.png) no-repeat 100% /
+          100%;
+
+        width: remCalc(250);
+        height: remCalc(250);
+
+        position: relative;
+
+        &:before {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+
+          content: "";
+          background: url(../assets/Temtem_portrait_border.png) no-repeat;
+          pointer-events: none;
+          z-index: 5;
+        }
+
+        img {
+          width: 250px;
+          filter: drop-shadow(0 0 5px rgb(0, 0, 0));
+
+          -webkit-clip-path: polygon(
+            51% 5%,
+            88% 28%,
+            89% 73%,
+            50% 92%,
+            14% 72%,
+            12% 29%
+          );
+          clip-path: polygon(
+            51% 5%,
+            88% 28%,
+            89% 73%,
+            50% 92%,
+            14% 72%,
+            12% 29%
+          );
+        }
+      }
+    }
   }
 
   // Clip Path
