trocar imagem em nome de acordo com a busca

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -221,7 +221,7 @@ main {
 
         font-family: $textFontFamily;
         font-weight: 700;
-        color: $white;
+        color: $primaryColor;
 
         outline: none;
 
