--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ main {
   border-radius: 5px;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
-  color: #ffffff;
+  color: #36314f;
   outline: none;
   border: solid 3px transparent;
   -webkit-transition: all 0.2s ease;
