--- a/css/styles.scss
+++ b/css/styles.scss
@@ -220,6 +220,29 @@ main {
       right: remCalc(-10);
     }
 
+    .tempedia-text {
+      margin-top: 10rem;
+      padding: 3rem;
+
+      display: block;
+      position: absolute;
+      margin: 0 auto;
+      top: 35%;
+      right: 100%;
+      width: 90%;
+
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+
+      &.active {
+        opacity: 1;
+        visibility: visible;
+        transition: all 0.3s ease;
+        right: 0;
+      }
+    }
+
     form {
       text-align: center;
       padding-top: 2rem;
@@ -274,6 +297,18 @@ main {
     .temtem-card {
       margin: remCalc(32) remCalc(48);
 
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+      transform: translateX(-30rem);
+
+      &.active {
+        opacity: 1;
+        visibility: visible;
+        transition: all 0.3s ease;
+        transform: translateX(0);
+      }
+
       .temtem-portrait {
         background: url(../assets/Temtem_portrait_background.png) no-repeat 100% /
           100%;
@@ -298,6 +333,7 @@ main {
 
         img {
           width: 250px;
+          height: 250px;
           filter: drop-shadow(0 0 2px rgb(0, 0, 0));
 
           -webkit-clip-path: polygon(
