--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,16 @@ main {
 
 .tempedia .tempedia-container .temtem-card {
   margin: 2rem 3rem;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.3s ease;
@@ -414,6 +424,31 @@ main {
   transition: all 0.3s ease;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.tempedia .tempedia-container .temtem-card .temtem-infos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 1rem;
+  text-align: start;
+}
+
+.tempedia .tempedia-container .temtem-card .temtem-infos #types p,
+.tempedia .tempedia-container .temtem-card .temtem-infos #description p {
+  text-transform: uppercase;
+  color: #faa34a;
+  text-align: start;
+}
+
+.tempedia .tempedia-container .temtem-card .temtem-infos #types p span,
+.tempedia .tempedia-container .temtem-card .temtem-infos #description p span {
+  text-transform: none;
+  color: #36314f;
 }
 
 .tempedia .tempedia-container .temtem-card .temtem-portrait {
