--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $bgPrimary: #e94444;
-$primaryColor: #36314f;
+$primaryColor: #462f57;
 $secondaryColor: #faa34a;
 $lightPrimary: #855b80;
 $darkPrimary: #291736;
