--- a/css/styles.css
+++ b/css/styles.css
@@ -438,7 +438,7 @@ main {
   text-align: start;
 }
 
-.tempedia .tempedia-container .temtem-card .temtem-infos .types p,
+.tempedia .tempedia-container .temtem-card .temtem-infos .type-content p,
 .tempedia .tempedia-container .temtem-card .temtem-infos #description p,
 .tempedia .tempedia-container .temtem-card .temtem-infos #temtemId p {
   font-family: "Passion One", cursive;
@@ -448,7 +448,7 @@ main {
   font-size: 1.5rem;
 }
 
-.tempedia .tempedia-container .temtem-card .temtem-infos .types p span,
+.tempedia .tempedia-container .temtem-card .temtem-infos .type-content p span,
 .tempedia .tempedia-container .temtem-card .temtem-infos #description p span,
 .tempedia .tempedia-container .temtem-card .temtem-infos #temtemId p span {
   font-family: "Open Sans", sans-serif;
@@ -458,19 +458,19 @@ main {
   font-size: 1.125rem;
 }
 
-.tempedia .tempedia-container .temtem-card .temtem-infos .types {
-  margin-top: 0.4rem;
+.tempedia .tempedia-container .temtem-card .temtem-infos .type-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 0.625rem;
 }
 
-.tempedia .tempedia-container .temtem-card .temtem-infos .types img {
-  width: 40px;
-  display: block;
+.tempedia .tempedia-container .temtem-card .temtem-infos .type-content img {
+  width: 30px;
+  margin-right: 0.3rem;
 }
 
 .tempedia .tempedia-container .temtem-card .temtem-portrait {
